# filestem-diff

./: .gitignore  README.md  pyproject.toml
docs/: README.md
docs/references/: diffing-benchmarks.md  parser-contracts.md  run-report-format.md
src/filestemdiff/: __init__.py  differ.py  formatter.py  parser.py  py.typed
tests/: test_filestemdiff.py
