[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filestemdiff"
version = "0.1.0"
description = "Structured diff + word-level patch engine for file patches and inline text."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "WeeklyProjects" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=6",
    "ruff>=0.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
filestemdiff = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]
